act4/deploy_service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-service
spec:
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      containers:
      - name: todo-service
        image: natawut/todo-service:release-2.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8000
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
